--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,24 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="MarkerFeltWide.ttf">
+            <string>MarkerFelt-Wide</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Photo View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PhotoViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hid-9N-2VK">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="lve-ru-xKi">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="eEh-U0-rgW" userLabel="ShareButton">
+                                            <connections>
+                                                <action selector="shareButtonTouched:" destination="BYZ-38-t0r" id="xHW-Fx-ymd"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="5IQ-IE-UqH" userLabel="CancelButton">
+                                            <connections>
+                                                <action selector="cancelButtonTouched:" destination="BYZ-38-t0r" id="WiF-Yp-Z7s"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="miV-kt-HNh">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="SZZ-N1-a6G"/>
+                                    <barButtonItem systemItem="camera" id="oev-AT-WGy" userLabel="CameraButton">
+                                        <connections>
+                                            <action selector="cameraButtonTouched:" destination="BYZ-38-t0r" id="aqx-wL-UWr"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="GWP-5g-DvU"/>
+                                    <barButtonItem title="Album" id="CXb-6y-prq" userLabel="AlbumButton">
+                                        <connections>
+                                            <action selector="albumButtonTouched:" destination="BYZ-38-t0r" id="Ebd-FV-4OT"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Z31-cN-YA5"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UFw-s7-pBG">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="56r-ep-h78" userLabel="Top Text Field">
+                                <rect key="frame" x="60" y="94" width="255" height="47"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="36"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="topTextFIeldEditingDidBegin:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="bcq-oi-nYd"/>
+                                    <action selector="topTextFieldEditingDidEnd:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="4iX-OF-kec"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kc6-F2-208" userLabel="Bottom Text Field">
+                                <rect key="frame" x="60" y="546" width="255" height="47"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="36"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="56r-ep-h78" secondAttribute="trailing" constant="60" id="3bA-C6-epA"/>
+                            <constraint firstItem="miV-kt-HNh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9fe-tI-UkT"/>
+                            <constraint firstItem="miV-kt-HNh" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="A1e-pV-p0V"/>
+                            <constraint firstItem="hid-9N-2VK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Awf-GQ-Bgl"/>
+                            <constraint firstItem="Kc6-F2-208" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="BGS-dS-qIn"/>
+                            <constraint firstItem="56r-ep-h78" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="JBx-7z-dve"/>
+                            <constraint firstItem="hid-9N-2VK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JvK-R8-jxf"/>
+                            <constraint firstItem="miV-kt-HNh" firstAttribute="top" secondItem="UFw-s7-pBG" secondAttribute="bottom" id="Pmp-7j-hQU"/>
+                            <constraint firstItem="UFw-s7-pBG" firstAttribute="top" secondItem="hid-9N-2VK" secondAttribute="bottom" id="UrP-e4-NvJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kc6-F2-208" secondAttribute="trailing" constant="60" id="WI6-bU-ccr"/>
+                            <constraint firstItem="UFw-s7-pBG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YUs-Ms-kGu"/>
+                            <constraint firstItem="miV-kt-HNh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eKc-ni-xtq"/>
+                            <constraint firstItem="hid-9N-2VK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="iW9-ch-7Nc"/>
+                            <constraint firstItem="miV-kt-HNh" firstAttribute="top" secondItem="Kc6-F2-208" secondAttribute="bottom" constant="30" id="lP5-UW-hLK"/>
+                            <constraint firstItem="56r-ep-h78" firstAttribute="top" secondItem="hid-9N-2VK" secondAttribute="bottom" constant="30" id="oly-Ag-2zP"/>
+                            <constraint firstItem="UFw-s7-pBG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="z2O-FM-Oej"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bottomTextField" destination="Kc6-F2-208" id="SkT-3X-95M"/>
+                        <outlet property="cameraButton" destination="oev-AT-WGy" id="BiX-HB-Z2N"/>
+                        <outlet property="imagePickerView" destination="UFw-s7-pBG" id="oFM-dF-F2d"/>
+                        <outlet property="topTextField" destination="56r-ep-h78" id="23b-Sa-r1e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
